Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.12 (MM/DD/YY):
	General:
	* purple-url-handler now works with Python 3.x (Daniël van Eeden)

	Pidgin:
	* The shout smile now matches the default theme (Steve Vaught)

	Windows-Specific Changes:
	* Updates to dependencies:
		* Cyrus SASL 2.1.26
		* libxml2 2.9.2
		* NSS 3.17.3 and NSPR 4.10.7
		* Perl 5.20.1
		* SILC 1.1.12
	* Remove support for Tcl plugins

	Gadu-Gadu:
	* Updated internal libgadu to version 1.12.1.

version 2.10.11 (11/23/14):
	General:
	* Fix handling of Self-Signed SSL/TLS Certificates when using the NSS
	  plugin (#16412)
	* Improve default cipher suites used with the NSS plugin (#16262)
	* Add NSS Preferences plugin which allows the SSL/TLS Versions and
	  cipher suites to be configured (#8061)

	Gadu-Gadu:
	* Fix a bug that prevented plugin to load when compiled without GnuTLS.
	  (mancha) (#16431)
	* Fix build for platforms without AF_LOCAL definition. (#16404)

	MSN:
	* Fix broken login due to server change (dx, TReKiE). (#16451, #16455)
	* Fail early when buddy list is unavailable instead of wasting bandwidth
	  endlessly re-trying.

version 2.10.10 (10/22/14):
	General:
	* Check the basic constraints extension when validating SSL/TLS
	  certificates. This fixes a security hole that allowed a malicious
	  man-in-the-middle to impersonate an IM server or any other https
	  endpoint. This affected both the NSS and GnuTLS plugins. (Discovered
	  by an anonymous person and Jacob Appelbaum of the Tor Project, with
	  thanks to Moxie Marlinspike for first publishing about this type of
	  vulnerability. Thanks to Kai Engert for guidance and for some of the
	  NSS changes) (CVE-2014-3694)
	* Allow and prefer TLS 1.2 and 1.1 when using the NSS plugin for SSL.
	  (Elrond and Ashish Gupta) (#15909)

	libpurple3 compatibility:
	* Encrypted account passwords are preserved until the new one is set.
	* Fix loading Google Talk and Facebook XMPP accounts.
